# StockX

./: .env.example  .gitignore  CLAUDE.md  README.md  build.py  main.py  paths.py  pyproject.toml  run_gui.py  stockx.spec
.github/workflows/: tests.yml
agent/: core.py
docs/superpowers/plans/: 2026-03-18-gui-premium-redesign.md
docs/superpowers/specs/: 2026-03-18-gui-premium-redesign-design.md
gui/: __init__.py  app.py  state.py  theme.py
gui/views/: __init__.py  analysis.py  backtest.py  earnings.py  heatmap.py  macro.py  news.py  optimize.py  portfolio.py  settings.py  watchlist.py
llm/: router.py
memory/: store.py
services/: backtest.py  charting.py  consumer_inflation.py  diagnostics.py  factor_exposure.py  indicators.py  knowledge.py  macro_charts.py  macro_signals.py  monitor.py  notifications.py  optimize.py  perf_metrics.py  research.py  sentiment.py  yield_curve.py
tests/: test_agent_core.py  test_backtest.py  test_backtest_worker.py  test_consumer_inflation.py  test_factor_exposure.py  test_indicator_series.py  test_knowledge.py  test_llm_router.py  test_macro_signals.py  test_monitor.py  test_optimize.py  test_optimize_shrinkage.py  test_optimize_worker.py  test_paths.py  test_perf_metrics.py  test_portfolio_math.py  test_research.py  test_scoring_tiers.py  test_sentiment.py  test_state_migration.py  test_valuation_score.py  test_worker_lifecycle.py  test_yield_curve.py
tests/validation/: test_backtest_lookahead.py  test_economic_signs.py  test_factor_ols_vs_statsmodels.py  test_indicators_vs_reference.py  test_knowledge_context.py  test_optimize_vs_closedform.py  test_perf_metrics_vs_empyrical.py  test_probit_vs_statsmodels.py  test_risk_metrics.py
tests/validation/fixtures/: spy_prices.csv
tools/: __init__.py  base.py  make_icon.py  search.py  stock.py
validation/: AGENT_AUDIT_REPORT.md  AUDIT_REPORT.md  MACRO_AUDIT_REPORT.md  README.md  REMAINING_AUDIT_REPORT.md  audit.py  audit_agent.py  audit_macro.py  report.py
