[project]
name = "stockx"
version = "1.0.0"
description = "StockX — local AI agent for Windows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "shivnarainms22" },
]
keywords = ["stock-analysis", "ai-agent", "finance", "portfolio-tracker", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/shivnarainms22/StockX"
Repository = "https://github.com/shivnarainms22/StockX"
Issues = "https://github.com/shivnarainms22/StockX/issues"
dependencies = [
    "starlette>=0.36",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "playwright>=1.44",
    "aiofiles>=23.2",
    "chromadb>=0.5",
    "python-dotenv>=1.0",
    "websockets>=12.0",
    "PyQt6>=6.6",
    "qasync>=0.27",
    "yfinance>=1.2.0",
    "plyer>=2.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.26",
]

[project.scripts]
stockx = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
